<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">wallet</string>
    <string name="welcome_back">Welcome Back！</string>
    <string name="password">Password</string>
    <string name="unlock">Unlock</string>
    <string name="name">Name</string>
    <string name="input_name">Input Name</string>
    <string name="input">Input</string>
    <string name="paste">Paste</string>
    <string name="import_wallet_tips">Enter your private key or mnemonic</string>
    <string name="reset_wallet">Reset Wallet</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="verify_password">Verify Password</string>
    <string name="import_or_create_a_wallet">Import or\nCreate a wallet</string>
    <string name="import_an_existing">Import an existing wallet\nor create a new one</string>
    <string name="import_text">Import</string>
    <string name="create">Create</string>
    <string name="import_a_wallet">Import a Wallet</string>
    <string name="loop_usdt">Loop USDT</string>
    <string name="loop_edit_tips">Input amount≤500USDT</string>
    <string name="enter_your_secret">Enter your Secret Recovery Phrase</string>
    <string name="set_wallet_name">Set wallet name</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_repeat_password">Please repeat password</string>
    <string name="repeat_password_should_equal_to_password">repeat password should equal to password</string>
    <string name="agree_first">Agree first</string>
    <string name="set_password">Set Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="password_is_not_less_than_8digits">Password is not less than 8digits</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="index_1">1</string>
    <string name="index_2">2</string>
    <string name="index_3">3</string>
    <string name="secure_wallet">Secure wallet</string>
    <string name="confirm">Confirm</string>
    <string name="continue_tips">Continue</string>
    <string name="total">Total</string>
    <string name="custom_tokens">Custom Tokens</string>
    <string name="token_address">Token Address</string>
    <string name="token_name">Token Name</string>
    <string name="gno">GNO</string>
    <string name="all">All</string>
    <string name="fee">Fee</string>
    <string name="disburse">Disburse</string>
    <string name="income">Income</string>
    <string name="rename">Rename</string>
    <string name="transfer">Transfer</string>
    <string name="address_start_tips">0x...</string>
    <string name="default_decimal">18</string>
    <string name="token_symbol">Token Symbol</string>
    <string name="token_decimal">Token Decimal</string>
    <string name="estimated_gas_fee">Estimated gas fee</string>
    <string name="i_have_carefully_and_afree_with">I have carefully and afree with <font color='#007DFF'>User Agreement</font></string>
    <string name="custom_networks">Custom Networks</string>
    <string name="network_name">Network Name</string>
    <string name="networks">Networks</string>
    <string name="presets">Presets</string>
    <string name="network_name_optiona">Network Name（optiona）</string>
    <string name="rpc_url">RPC Url</string>
    <string name="chain_id">Chain ID</string>
    <string name="symbol">Symbol</string>
    <string name="block_explorer_url">Block Explorer URL</string>
    <string name="add">Add</string>
    <string name="approval_management">Approval Management</string>
    <string name="insufficient_amount">Insufficient amount</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="add_wallet_title">Hi～\nWelcome to YNS Wallet！</string>
    <string name="private_key_tips">The private key is not encrypted, please export it carefully and the private key.</string>
    <string name="import_tips">Resetting the password will reset the wallet, and accounts previously imported through the private key will be deleted</string>
    <string name="add_custom_networks">Add Custom Networks</string>
    <string name="block_explore_url_optional">Block Explore URL（optional）</string>
    <string name="yns_wallet">YNS Wallet</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="current_price">Current Price</string>
    <string name="yns">YNS</string>
    <string name="price_impact">Price Impact</string>
    <string name="private_key_qr_code">Private Key QR Code</string>
    <string name="details">Details</string>
    <string name="hide_small_transactions">hide small\ntransactions</string>
    <string name="doller_0_00">$ 0.00</string>
    <string name="receive">Receive</string>
    <string name="super_loop">Super Loop</string>
    <string name="circulation">Circulation</string>
    <string name="provided_by_yunus">Provided by YUNUS</string>
    <string name="assets">Assets</string>
    <string name="discover">Discover</string>
    <string name="ethereum_mainnet">Ethereum Mainnet</string>
    <string name="me">Me</string>
    <string name="test_mine_string">037hd75jdr83hfnlksowu5fddhu43ew82737edhfvjskfjhgi99</string>
    <string name="transaction_records">Transaction Records</string>
    <string name="select_token">Select Token</string>
    <string name="share_my_address">Share my address</string>
    <string name="language">Language</string>
    <string name="user_agreement">User Agreement</string>
    <string name="about_us">About us</string>
    <string name="usdt">USDT</string>
    <string name="usdt_yns">USDT YNS</string>
    <string name="trx">TRX</string>
    <string name="logout">Logout</string>
    <string name="english">English</string>
    <string name="test_string_eth">ETH</string>
    <string name="no_wallet">No Wallet</string>
    <string name="go_to_create_wallet">Go to create wallet</string>
    <string name="wallet_details">Wallet Details</string>
    <string name="wallet">Wallet</string>
    <string name="network_name_optional">Network Name(optional)</string>
    <string name="export_private_key">Export Private Key</string>
    <string name="modify_password">Modify Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="modify_walletname">Modify WalletName</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="resetting_the_password_will_reset">Resetting the password will reset the wallet, and accounts previously imported through the private key will be deleted</string>
    <string name="next">next</string>
    <string name="next_step">Next Step</string>
    <string name="done">Done</string>
    <string name="wallet_step_hint_title">Please write down the following words in the correct order.</string>
    <string name="wallet_step_hint_bottom">Anyone with your private key can access all your assets. Please keep the information to yourself.</string>
    <string name="mnemonic_qr_code">Mnemonic QR Code</string>
    <string name="keep_mnemonic_safe">Keep Mnemonic safe</string>
    <string name="keep_content">Anyone with your private key can access all your assets. Please be sure to back up your mnemonic before you receive transfers or delete the app.</string>
    <string name="keep_content2">YNS will not store your private key on its server, and therefore is unable to recover your wallet once it is lost.</string>
    <string name="already_back_up">Already Back Up</string>
    <string name="view_mnemonic">View Mnemonic</string>
    <string name="choose_index_1">Choose the No.%s word</string>
    <string name="word_order_wrong_tips">Wrong order, Please try again</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="pair_cold_wallet">Pair Cold Wallet</string>
    <string name="pair_cold_wallet_finish_tips">Please scan the QR code below through cold wallet mode</string>
    <string name="pair_cold_wallet_tips">Pairing your wallet with a cold wallet allows you to checkyour wallet balance and transaction records in real time.You can also sign transactions by scanning the QR codesof both wallets in a mutual way to improve your assetsecurity.</string>
    <string name="sign_with_your_offine_cold_wallet">sign with your offine cold wallet; recommended for large asset holders</string>
    <string name="accounts_to_be_imported">Accounts to be imported</string>
    <string name="choose_another_account">choose another account</string>
    <string name="tabbgfncgyhjvprxg1wp57va5wae6chrwc">TAbBgFNCgYHJvPRxG1wp57Va5Wae6chRwc</string>
    <string name="balance_0_trx">Balance：0 TRX</string>
    <string name="path_m_dhdj_345_1">Path:m/dhdj/345/1</string>
    <string name="change_hd_wallet">Change HD Wallet</string>
    <string name="hi_welcome_to_yns_wallet">Hi～\nWelcome to YNS Wallet!</string>
    <string name="generate_wallet">Generate Wallet</string>
    <string name="generate_wallet_tips">Generate from the seed of the following wallet</string>
    <string name="generate_related_wallet">Generate Related Wallet</string>
    <string name="generate_wallet_content">Generate a related wallet based on your HD wallet</string>
    <string name="import_your_mnemonic_private_key_or_keystore_with_one_tap">Import your mnemonic, private key, or keystore with one tap</string>
    <string name="change_password">Change Password</string>
    <string name="wallet_management">Wallet Management</string>
    <string name="back_up_private_key">Back Up Private Key</string>
    <string name="back_up_mnemonic">Back Up Mnemonic</string>
    <string name="verify_mnemonic">Verify Mnemonic</string>
    <string name="check_back_up_record">Check Back Up Record</string>
    <string name="old_password">Old Password</string>
    <string name="copy_address">Copy Address</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="please_enter_wallet_address">Please enter wallet address</string>
    <string name="cold_wallet_has_signed">Cold wallet signed</string>
    <string name="copy_private_key">Copy Private Key</string>
    <string name="send">Send</string>
    <string name="tronscan">TRONSCAN</string>
    <string name="detailed_data">Detailed data</string>
    <string name="inquire_link">Inquire Link</string>
    <string name="observe">Observe</string>
    <string name="send_account">Send Account</string>
    <string name="account">Account</string>
    <string name="cycle">Cycle</string>
    <string name="return_due">Return Due</string>
    <string name="yunus_loop_defi">Yunus Loop DeFi</string>
    <string name="token_rewards">Token Rewards</string>
    <string name="receive_account">Receive Account</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="confirm_loop">Confirm Loop</string>
    <string name="confirm_to_reset">Confirm to reset?</string>
    <string name="service_email">Service Email</string>
    <string name="support_vitails_one">Support@vitails.one</string>
    <string name="official_website">Official Website</string>
    <string name="http_yunus_network">Http://yunus.network/</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="congratulations">Congratulations</string>
    <string name="create_wallet_success_tips">You‘ve successfully import your wallet.\nRemember to keep your secret recovery phrase\nsafe, it’s your responsibility!</string>
</resources>