<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.yns.wallet.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/custom_tokens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_status_bar" />

    <TextView
        android:id="@+id/tv_old_pwd_title"
        style="@style/common_title_1"
        android:layout_marginTop="24dp"
        android:text="@string/token_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <EditText
        android:id="@+id/et_secret"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:gravity="left|top"
        android:hint="@string/address_start_tips"
        android:lines="4"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_old_pwd_title" />

    <TextView
        android:id="@+id/tv_pwd_title"
        style="@style/common_title_1"
        android:layout_marginTop="24dp"
        android:text="@string/token_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_secret" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/gno"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="80dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pwd_title" />


    <TextView
        android:id="@+id/tv_repeat_pwd_title"
        style="@style/common_title_1"
        android:layout_marginTop="24dp"
        android:text="@string/token_decimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    <EditText
        android:id="@+id/et_repeat_pwd"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/default_decimal"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="80dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat_pwd_title" />


    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_bg_btn"
        android:gravity="center"
        android:text="@string/import_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_repeat_pwd" />

</androidx.constraintlayout.widget.ConstraintLayout>