<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main" />

    <com.yns.wallet.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/about_us" />

    <ImageView
        android:id="@+id/about_img"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:background="@drawable/shape_color_border_round"
        android:paddingStart="21dp"
        android:paddingTop="28dp"
        android:paddingEnd="21dp"
        android:paddingBottom="28dp"
        android:src="@mipmap/logo_white_small"
        android:text="@string/yns_wallet"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:src="@mipmap/icon_email" />

        <TextView
            android:id="@+id/tv_email_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_icon"
            android:src="@mipmap/icon_email"
            android:text="@string/service_email"
            android:textColor="#8775AE" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email_name"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_icon"
            android:src="@mipmap/icon_email"
            android:textColor="@color/white"
            android:text="@string/support_vitails_one" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/iv_website_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:src="@mipmap/icon_website" />

        <TextView
            android:id="@+id/tv_website_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_website_icon"
            android:text="@string/official_website"
            android:textColor="#8775AE" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_website_name"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_website_icon"
            android:textColor="@color/white"
            android:text="@string/http_yunus_network" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_btn_full_bg"
        android:gravity="center"
        android:text="@string/check_for_updates"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>