<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.yns.wallet.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/import_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_status_bar" />

    <TextView
        android:id="@+id/tv_wallet_name_title"
        style="@style/common_title_1"
        android:layout_marginTop="24dp"
        android:text="@string/set_wallet_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <EditText
        android:id="@+id/et_wallet_name"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/input_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wallet_name_title" />

    <ImageView
        android:id="@+id/iv_wallet_name_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/selector_pwd_eye"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_wallet_name"
        app:layout_constraintEnd_toEndOf="@id/et_wallet_name"
        app:layout_constraintTop_toTopOf="@id/et_wallet_name" />

    <TextView
        android:id="@+id/wallet_name_empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tips_red_color"
        android:textSize="10sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/please_enter_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_wallet_name" />

    <TextView
        android:id="@+id/tv_pwd_title"
        style="@style/common_title_1"
        android:layout_marginTop="24dp"
        android:text="@string/set_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_wallet_name" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/password_is_not_less_than_8digits"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="80dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pwd_title" />

    <ImageView
        android:id="@+id/iv_pwd_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/selector_pwd_eye"
        app:layout_constraintBottom_toBottomOf="@id/et_pwd"
        app:layout_constraintEnd_toEndOf="@id/et_pwd"
        app:layout_constraintTop_toTopOf="@id/et_pwd" />

    <TextView
        android:id="@+id/psw_empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tips_red_color"
        android:textSize="10sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/please_enter_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    <TextView
        android:id="@+id/tv_repeat_pwd_title"
        style="@style/common_title_1"
        android:layout_marginTop="24dp"
        android:text="@string/repeat_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    <EditText
        android:id="@+id/et_repeat_pwd"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="80dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat_pwd_title" />

    <ImageView
        android:id="@+id/iv_repeat_pwd_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/selector_pwd_eye"
        app:layout_constraintBottom_toBottomOf="@id/et_repeat_pwd"
        app:layout_constraintEnd_toEndOf="@id/et_repeat_pwd"
        app:layout_constraintTop_toTopOf="@id/et_repeat_pwd" />

    <TextView
        android:id="@+id/repeat_psw_empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tips_red_color"
        android:textSize="10sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/please_repeat_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_repeat_pwd" />

    <TextView
        android:id="@+id/tv_import"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_bg_btn"
        android:gravity="center"
        android:text="@string/import_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_repeat_pwd" />

</androidx.constraintlayout.widget.ConstraintLayout>