<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_step_bg"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="#2E1766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_index_1"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:textIsSelectable="true"
        android:background="@drawable/shape_index_circle_main_full"
        android:gravity="center"
        android:text="@string/index_1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/v_step_bg"
        app:layout_constraintTop_toTopOf="@id/v_step_bg" />

    <TextView
        android:id="@+id/tv_index_1_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textIsSelectable="true"
        android:text="@string/create_wallet"
        android:textColor="@color/normal_blue_color"
        app:layout_constraintEnd_toEndOf="@id/tv_index_1"
        app:layout_constraintStart_toStartOf="@id/tv_index_1"
        app:layout_constraintTop_toBottomOf="@id/tv_index_1" />

    <View
        android:id="@+id/v_line_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/normal_blue_color"
        app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
        app:layout_constraintEnd_toStartOf="@id/tv_index_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_index_1"
        app:layout_constraintTop_toTopOf="@id/tv_index_1" />

    <TextView
        android:id="@+id/tv_index_2"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:background="@drawable/shape_index_circle_main_full"
        android:gravity="center"
        android:text="@string/index_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
        app:layout_constraintEnd_toStartOf="@id/v_line_2"
        app:layout_constraintStart_toEndOf="@id/v_line_1"
        app:layout_constraintTop_toTopOf="@id/tv_index_1" />

    <TextView
        android:id="@+id/tv_index_2_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/secure_wallet"
        android:textColor="@color/normal_blue_color"
        app:layout_constraintEnd_toEndOf="@id/tv_index_2"
        app:layout_constraintStart_toStartOf="@id/tv_index_2"
        app:layout_constraintTop_toBottomOf="@id/tv_index_1" />


    <View
        android:id="@+id/v_line_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/normal_blue_color"
        app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
        app:layout_constraintEnd_toStartOf="@id/tv_index_3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_index_2"
        app:layout_constraintTop_toTopOf="@id/tv_index_1" />

    <TextView
        android:id="@+id/tv_index_3"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/shape_index_circle_main_full"
        android:gravity="center"
        android:text="@string/index_3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/v_line_2"
        app:layout_constraintTop_toTopOf="@id/tv_index_1" />

    <TextView
        android:id="@+id/tv_index_3_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirm"
        android:textColor="@color/normal_blue_color"
        app:layout_constraintEnd_toEndOf="@id/tv_index_3"
        app:layout_constraintStart_toStartOf="@id/tv_index_3"
        app:layout_constraintTop_toBottomOf="@id/tv_index_1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/v_step_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@mipmap/create_wallet_success"
                tools:layout_editor_absoluteY="207dp" />

            <TextView
                android:id="@+id/tips_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:layout_marginTop="28dp"/>

            <TextView
                android:id="@+id/tips_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/create_wallet_success_tips" />

            <TextView
                android:id="@+id/done_tv"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_bg_btn"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="50dp"/>

        </LinearLayout>

    </FrameLayout>





</androidx.constraintlayout.widget.ConstraintLayout>